Solve problem where nested shortcodes would not render

--- a/config.toml
+++ b/config.toml
@@ -54,3 +54,8 @@ enableMissingTranslationPlaceholders = true
 [taxonomies]
   tag = "tags"
 
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+
