--- a/data/formats.yml
+++ b/data/formats.yml
@@ -1,19 +1,19 @@
-- key: conference
-  name: 'Conference '
-  id: 4c0d8a93-a0fb-5fe4-ab31-7cc56e05e942
+#- key: conference
+#  name: 'Conference '
+#  id: 4c0d8a93-a0fb-5fe4-ab31-7cc56e05e942
 - key: keynote
-  name: Keynote
+  name: 'Keynote '
 - key: panel
-  name: Panel
+  name: 'Panel '
 - key: workshop
-  name: Workshop
-- key: lunch
-  name: Lunch
+  name: 'Workshop '
+- key: lunch 
+  name: 'Lunch '
 - key: pause
-  name: Pause
+  name: 'Pause '
 - key: apero
-  name: Apéro
+  name: 'Apéro '
 - key: quickie
-  name: Quickie
+  name: 'Quickie '
   id: f1f4eb00-ff40-57ea-805a-b3aa3ce5f6e6
 
